2004-04-16  Jason Molenda  (jmolenda@apple.com)

	* frame.c: Minor typeo corrections in comments.

2004-04-16  Joel Brobecker  <brobecker@gnat.com>

	* observer.c (observer_test_first_notification_function): Update
	function profile.
	(observer_test_second_notification_function): Likewise.
	(observer_test_third_notification_function): Likewise.

2004-04-16  Mark Kettenis  <kettenis@gnu.org>

	From Brian Ford <ford@vss.fsi.com>:
	* i386-tdep.c (i386_coff_init_abi): New function.
	* i386-tdep.h (i386_coff_init_abi): New prototype.	
	* i386-cygwin-tdep.c (i386_cygwin_init_abi): Call it.  Use correct
	register number translation functions for DWARF and DWARF 2.

2004-04-16  Joel Brobecker  <brobecker@gnat.com>

        * dwarf2read.c: Back out my previous change, it was incorrect.

2004-04-16  Daniel Jacobowitz  <drow@mvista.com>

	* dwarf2read.c: Include "hashtab.h".
	(struct dwarf2_cu): Add partial_dies, comp_unit_obstack,
	has_namespace_info.
	(struct partial_die_info): Add comments.  Use bitfields to reduce
	memory footprint.  Add scope, scope_set, has_specification,
	spec_offset, die_parent, die_child, and die_sibling.
	(peek_die_abbrev): Add prototype.
	(partial_read_comp_unit_head): New function, broken out from
	dwarf2_build_psymtabs_hard.
	(dwarf2_build_psymtabs_hard): Remove unused variable abbrev_ptr.
	Use partial_read_comp_unit_head.  Initialize the CU and
	comp_unit_obstack.  Update calls to read_partial_die and
	scan_partial_symbols.  Use free_stack_comp_unit and
	load_partial_dies.
	(scan_partial_symbols): Change PDI to a pointer.  Use the child and
	sibling pointers to walk partial DIEs.  Call fixup_partial_die.
	Update calls to helper functions.  Remove NAMESPACE argument.
	Update comments.
	(partial_die_parent_scope, partial_die_full_name): New functions.
	(add_partial_symbol): Remove namespace argument.  Update call to
	pdi_needs_namespace.  Use partial_die_full_name.  Handle
	DW_TAG_namespace.  Check has_namespace_info flag.